Implement servlets for Pricing and Discount management - Created `PricingServlet.java` to handle HTTP requests for pricing operations. - Created `DiscountServlet.java` to handle HTTP requests for discount operations. - Mapped servlets in `web.xml` for URL routing.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -88,4 +88,32 @@
         <url-pattern>/view-edit-vehicle</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>PromoCodeServlet</servlet-name>
+        <servlet-class>com.example.megacitycab.controller.PromoCodeServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>PromoCodeServlet</servlet-name>
+        <url-pattern>/promo-code-servlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>PricingServlet</servlet-name>
+        <servlet-class>com.example.megacitycab.controller.PricingServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PricingServlet</servlet-name>
+        <url-pattern>/pricing-servlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>DiscountServlet</servlet-name>
+        <servlet-class>com.example.megacitycab.controller.DiscountServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DiscountServlet</servlet-name>
+        <url-pattern>/discount-servlet</url-pattern>
+    </servlet-mapping>
+
 </web-app>
