Servlet mapped and Assign navigation to admin dashboard features

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -176,4 +176,15 @@
         <servlet-name>AssignBookingServlet</servlet-name>
         <url-pattern>/assign-booking</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>CompleteBookingServlet</servlet-name>
+        <servlet-class>com.example.megacitycab.controller.CompleteBookingServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CompleteBookingServlet</servlet-name>
+        <url-pattern>/complete-booking</url-pattern>
+    </servlet-mapping>
+
+
 </web-app>
